--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ cffi==1.17.1
 cryptography==43.0.3
 cx_Oracle==8.3.0
 Django==5.1.3
+gunicorn==23.0.0
+packaging==24.2
 paramiko==3.5.0
 pycparser==2.22
 PyNaCl==1.5.0
